--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               <p id="blog1"></p>
             </div>
             <h4>
-              Meeting between President ICCI AND A Delegation From Italy
+              Meeting with AJK president
             </h4>
             <p>
               Shahid khan From Islamabad United Group ICCI Facilitated a
